--- a/learn/Templates/login.html
+++ b/learn/Templates/login.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>  
-{% load bootstrap_toolkit %}  
 {# {% load url from future %}  #} 
 <html lang="en">  
 <head>  
     <meta charset="utf-8">  
     <title>数据库脚本发布系统</title>  
     <meta name="description" content="">  
-    <meta name="author" content="朱显杰">  
+    <meta name="author" content="Lucas">  
      <link rel="stylesheet" href="/static/css/bootstrap.css"> 
     <link rel="stylesheet" href="/static/css/bootstrap-responsive.css">
     <script src="/static/js/bootstrap.min.js"></script>
