--- a/learn/Templates/home.html
+++ b/learn/Templates/home.html
@@ -7,6 +7,6 @@
 hello world<br>
 test test test<br>
 <b>black</b>
-<a href="http://127.0.0.1:8000/">index</a>
+<a href="/login/">登录</a>
 </body>
 </html>
