login function finish

--- a/learn/Templates/login.html
+++ b/learn/Templates/login.html
@@ -4,7 +4,7 @@
 <html lang="en">  
 <head>  
     <meta charset="utf-8">  
-    <title>数据库脚本发布系统</title>  
+    <title>Task Manager</title>  
     <meta name="description" content="">  
     <meta name="author" content="Lucas">
     <script src="static/js/jquery.js"></script>  
