--- a/learn/Templates/base.html
+++ b/learn/Templates/base.html
@@ -4,10 +4,10 @@
 <script type="text/javascript" src="static/js/jquery.js"></script>
 <script type="text/javascript" src="/static/twitter-bootstrap-v2/docs/assets/js/jquery-ui.js"></script> 
 <link href="/static/twitter-bootstrap-v2/docs/assets/css/bootstrap-combined.min (1).css" rel="stylesheet" media="screen">
-<script type="text/javascript" src="http://www.francescomalagrino.com/BootstrapPageGenerator/3/js/bootstrap.min.js"></script>
+<script  src="/static/twitter-bootstrap-v2/docs/assets/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="container-fluid" id="XS">
+<div class="container-fluid">
 
 	<div class="row-fluid">
 		<div class="span12">
@@ -35,23 +35,7 @@
 					this is test descirbe
 				</p>
 		
-			</div> <a id="modal-803260" href="#modal-container-803260" role="button" class="btn" data-toggle="modal">触发遮罩窗体</a>
-			<div id="modal-container-803260" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-				<div class="modal-header">
-					 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-					<h3 id="myModalLabel">
-						标题栏
-					</h3>
-				</div>
-				<div class="modal-body">
-					<p>
-						显示信息
-					</p>
-				</div>
-				<div class="modal-footer">
-					 <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button> <button class="btn btn-primary">保存设置</button>
-				</div>
-			</div>
+			</div> 
 			<table class="table table-hover">
 				<thead>
 					<tr>
@@ -78,23 +62,8 @@
 							TB - Monthly
 						</td>
 						<td>
-			</div> <a id="modal-803260" href="#modal-container-803260" role="button" class="btn" data-toggle="modal">触发遮罩窗体</a>
-			<div id="modal-container-803260" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-				<div class="modal-header">
-					 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-					<h3 id="myModalLabel">
-						标题栏
-					</h3>
-				</div>
-				<div class="modal-body">
-					<p>
-						显示信息
-					</p>
-				</div>
-				<div class="modal-footer">
-					 <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button> <button class="btn btn-primary">保存设置</button>
-				</div>
-			</div>						</td>
+						button
+			 		   </td>
 						<td>
 							Default
 						</td>
@@ -157,6 +126,23 @@
 					</tr>
 				</tbody>
 			</table>
+			<button type="button" id="modal-803260" href="#modal-container-803260" role="button" class="btn btn-default" data-toggle="modal">完成</button>
+			<div id="modal-container-803260" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				<div class="modal-header">
+					 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+					<h3 id="myModalLabel">
+						info
+					</h3>
+				</div>
+				<div class="modal-body">
+					<p>
+						要保存计划吗
+					</p>
+				</div>
+				<div class="modal-footer">
+					 <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button> <button class="btn btn-primary">确定</button>
+				</div>
+			</div>		
 			<div class="pagination pagination-centered">
 				<ul>
 					<li>
@@ -185,5 +171,6 @@
 		</div>
 	</div>
 </div>
+
 </body>
 </html>
